# regression

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  cabal.project  default.nix  external.nix  regression.cabal
src/: Regression.hs
src/Regression/: Main.hs
